--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,19 @@ configure_file (
 # so that we will find TutorialConfig.h
 include_directories("${PROJECT_BINARY_DIR}")
 
+# should we use our own math functions?
+option (USE_MYMATH 
+	        "Use tutorial provided math implementation" ON) 
+
+# add the MathFunctions library?
+#
+if (USE_MYMATH)
+	include_directories ("${PROJECT_SOURCE_DIR}/MathFunctions")
+	add_subdirectory (MathFunctions)
+	set (EXTRA_LIBS ${EXTRA_LIBS} MathFunctions)
+endif (USE_MYMATH)
+
 # add the executable
-add_executable(Tutorial tutorial.cxx)
+add_executable (Tutorial tutorial.cxx)
+target_link_libraries (Tutorial  ${EXTRA_LIBS})
+
