--- a/MathFunctions/CMakeLists.txt
+++ b/MathFunctions/CMakeLists.txt
@@ -1,3 +1,6 @@
 
 add_library(MathFunctions mysqrt.cxx)
 
+install (TARGETS MathFunctions DESTINATION bin)
+install (FILES MathFunctions.h mysqrt.h DESTINATION include)
+
