--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required (VERSION 2.6)
 project (Tutorial)
+
 # The version number.
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
 
 # does this system provide the log and exp functions?
 include (CheckFunctionExists)
+
 check_function_exists (log HAVE_LOG)
 check_function_exists (exp HAVE_EXP)
 
@@ -75,6 +77,11 @@ macro (do_test arg result)
 endmacro (do_test)
 
 # do a bunch of result based tests
+do_test (4 "4 is 2")
+do_test (9 "9 is 3")
+do_test (5 "5 is 2.236")
+do_test (7 "7 is 2.645")
 do_test (25 "25 is 5")
 do_test (-25 "-25 is 0")
+do_test (0.0001 "0.0001 is 0.01")
 
