--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,3 +93,6 @@ set (CPACK_PACKAGE_VERSION_MAJOR "${Tutorial_VERSION_MAJOR}")
 set (CPACK_PACKAGE_VERSION_MINOR "${Tutorial_VERSION_MINOR}")
 include (CPack)
 
+# enable dashboard scripting
+include (CTest)
+
