--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,36 @@
-cmake_minimum_required (VERSION 2.6)
-project (Tutorial)
+cmake_minimum_required (VERSION 3.10)
+
+project (Tutorial VERSION 1.0)
+
+# specify the C++ standard
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 # The version number.
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
 
-# configure a header file to pass some of the CMake settings
-# to the source code
-configure_file (
-	"${PROJECT_SOURCE_DIR}/TutorialConfig.h.in"
-	"${PROJECT_BINARY_DIR}/TutorialConfig.h"
-	)
-
-# add the binary tree to the search path for include files
-# so that we will find TutorialConfig.h
-include_directories("${PROJECT_BINARY_DIR}")
-
 # should we use our own math functions?
-option (USE_MYMATH 
-	        "Use tutorial provided math implementation" ON) 
+option (USE_MYMATH
+  "Use tutorial provided math implementation" ON)
+
+configure_file (TutorialConfig.h.in TutorialConfig.h)
 
 # add the MathFunctions library?
 #
 if (USE_MYMATH)
-	include_directories ("${PROJECT_SOURCE_DIR}/MathFunctions")
-	add_subdirectory (MathFunctions)
-	set (EXTRA_LIBS ${EXTRA_LIBS} MathFunctions)
-endif (USE_MYMATH)
+  add_subdirectory (MathFunctions)
+  list(APPEND EXTRA_LIBS MathFunctions)
+  list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/MathFunctions")
+endif ()
 
 # add the executable
 add_executable (Tutorial tutorial.cxx)
-target_link_libraries (Tutorial  ${EXTRA_LIBS})
+
+target_link_libraries (Tutorial PUBLIC ${EXTRA_LIBS})
+
+target_include_directories(Tutorial PUBLIC
+  "${PROJECT_BINARY_DIR}"
+  "${EXTRA_INCLUDES}"
+  )
 
